# EventTrader

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  api_dict.json  app_dict.json  config.py  db.sqlite3  entrypoint.sh  main.ipynb  main.py  pyproject.toml  start.sh
.github/workflows/: deploy.yml  release.yml
app/: save_database.py
app/database/: init_db.py
app/database/models/: strategy_select.py
app/database/repositories/: base_repository.py
app/notify/: email_notifier.py  notifier.py  sms_notifier.py  wechat_notifier.py
event_trader/: __init__.py  base_stocks.py  config.py  demo_account.py  stock_data.py  stock_info.py  stock_market.py  stocks_manager.py  trading_time_checker.py  utils.py
event_trader/database/: __init__.py  init_db.py
event_trader/database/models/: strategy_select.py
event_trader/database/repositories/: strategy_select_repository.py
event_trader/fetchers/: __init__.py  base_fetcher.py  index_components_fetcher.py  index_list_fetcher.py  stock_chip_fetcher.py  stock_hist_fetcher.py  stock_info_fetcher.py  stock_realtime_fetcher.py
event_trader/huntings/: __init__.py  end_hunting.py
event_trader/notify/: __init__.py  email_notifier.py  sms_notifier.py  wechat_notifier.py
event_trader/strategies/: __init__.py  base_strategy.py  boll_strategy.py  kdj_strategy.py  ma1_strategy.py  ma2_strategy.py  macd_strategy.py  moving_average_convergence_divergence_strategy.py  one_moving_average_strategy.py  pd_strategy.py  price_deviation_strategy.py  simple_moving_average_strategy.py  stochastic_oscillator_strategy.py  trading_strategy.py  traditional_boll_strategy.py  update_simple_moving_average_strategy.py  vma_strategy.py  volume_moving_average_strategy.py
scripts/: build-publish.sh
tests/: test_stock_data.py  test_strategies.py
