[tool.poetry]
name = "event-trader"
version = "0.1.8"
description = "量化交易-选股策略-自定义参数指标"
authors = ["sjzsdu <122828837@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
akshare = "^1.15.21"
pandas = "^2.2.3"
mplfinance = "^0.12.10b0"
matplotlib = "^3.9.2"
china-stock-data = "^0.1.2"
schedule = "^1.2.2"
itchat = "^1.3.10"
typer = "^0.15.1"
python-dotenv = "^1.0.1"
tencentcloud-sdk-python = "^3.0.1295"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest:main"
