[tool.poetry]
name = "event-trader"
version = "0.1.15"
description = "量化交易-选股策略-自定义参数指标"
authors = ["sjzsdu <122828837@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13" 
pandas = "^2.2.3"
mplfinance = "^0.12.10b0"
matplotlib = "^3.9.2"
china-stock-data = "^0.1.12"
typer = "^0.15.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pyinstaller = {version = "^5.13.0", python = ">=3.10,<3.13"} 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest:main"
